--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,8 @@
     "env": {
       "NPM_CONFIG_LEGACY_PEER_DEPS": "true"
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
